# WASI-nn-examples

./: .gitignore  README.md
rust/: Cargo.toml
rust/examples/classification-example-onnx/: README.md
rust/examples/classification-example-onnx/src/: main.rs
rust/examples/llm-example/: Cargo.toml  readme.md
rust/examples/llm-example/fixture/: merges.txt  prompt  vocab.json
rust/examples/llm-example/src/: main.rs
rust/examples/pytorch-example/: Cargo.toml  readme.md
rust/examples/pytorch-example/src/: main.rs
rust/src/: bindings.rs
