[package]
name = "llm-component-openvino"
version = "0.1.0"
edition = "2021"
authors = ["The Wasmtime Project Developers"]
publish = false

[dependencies]
wasi-nn = { path = "../.." }
image = { version = "0.25.2", default-features = false, features = ["jpeg"] }
ndarray = "0.16.1"
bytemuck = "1.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:llm-component-openvino"

[package.metadata.component.target.dependencies]

# This crate is built with the wasm32-wasip1 target, so it's separate
# from the main Wasmtime build, so use this directive to exclude it
# from the parent directory's workspace.
[workspace]
